# distributed-process

./: .ghci  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  ChangeLog  ChangeLog.md  LICENCE  LICENSE  Makefile  README.md  REPOS  _config.yml  cabal.project  contact.html  distributed-process-async.cabal  distributed-process-azure.cabal  distributed-process-client-server.cabal  distributed-process-execution.cabal  distributed-process-extras.cabal  distributed-process-fsm.cabal  distributed-process-platform.cabal  distributed-process-simplelocalnet.cabal  distributed-process-supervisor.cabal  distributed-process-systest.cabal  distributed-process.cabal  distributed-static.cabal  documentation.md  flake.nix  hie.yaml  index.md  install_all.sh  network-transport-inmemory.cabal  network-transport-tcp.cabal  network-transport-tests.cabal  network-transport.cabal  rank1dynamic.cabal  stack-ghc-7.10.3.yaml  stack-ghc-7.8.4.yaml  stack-ghc-8.0.1.yaml  (+21 more)
_includes/: footer.html  head.html  nav.html
_layouts/: changelog.html  changes.html  documentation.html  managedprocess.html  site.html  tutorial.html  tutorial1.html  tutorial2.html  tutorial3.html
_posts/: 2012-10-15-communication-patterns-in-cloud-haskell-4.md  2014-02-06-new-cloud-haskell-website.md  2014-03-28-network-transport-zeromq.md  2014-06-13-cloud-haskell-is-live.md  2015-06-17-cloud-haskell-0.2.2.md  2016-02-19-announce-0.6.0.md
azure-service-api/: azure-service-api.cabal
benchmarks/: .gitignore  Channels.hs  Headers.gnuplot  Indirection.gnuplot  JustPing.gnuplot  JustPingCacheHeader.hs  JustPingForkClient.hs  JustPingHaskell.hs  JustPingNaiveHeader.hs  JustPingOneRecv.hs  JustPingThroughChan.hs  JustPingThroughMVar.hs  JustPingTransport.hs  JustPingTwoSocketPairs.hs  JustPingWithHeader.hs  Latency.hs  Makefile  Makefile.JustPing  PingPipes.hs  PingPongTCP.hs  PingPongTCPTransport.hs  PingTCP.hs  PingTCPTransport.hs  PingTransport.hs  ProcessRing.hs  SendTCP.hs  SendTransport.hs  Spawns.hs  Throughput.hs  dtp-benchmarks.cabal  pingtest.c  results_notes.md
changelog/: dp-0.4.1.md  dp-0.4.2.md  dp-0.5.0.md  (+4 more)
distributed-process/: ChangeLog  LICENSE  distributed-process.cabal
distributed-process-azure/: distributed-process-azure.cabal
distributed-process-azure/demos/: Conway.hs  Echo.hs  Ping.hs
distributed-process-azure/src/Control/Distributed/Process/Backend/: Azure.hs
distributed-process-azure/src/Control/Distributed/Process/Backend/Azure/: CommandLine.hs  GenericMain.hs
distributed-process-tests/: README.md  distributed-process-tests.cabal
distributed-process-tests/src/Control/Distributed/Process/Tests/: CH.hs  Closure.hs  Mx.hs  Receive.hs  RemoteNodes.hs  Stats.hs  Tracing.hs
distributed-process-tests/src/Control/Distributed/Process/Tests/Internal/: Utils.hs
distributed-process-tests/src/Network/Transport/: Test.hs
distributed-process-tests/tests/: RemoteHost.hs  runInMemory.hs  runTCP.hs  runTCPMultiNode.hs
distributed-process/benchmarks/: Channels.hs  Latency.hs  Spawns.hs  Throughput.hs
distributed-process/benchmarks/erlang/: latency.erl  throughput.erl
distributed-process/benchmarks/remote/: Latency.hs  Throughput.hs
distributed-process/src/Control/Distributed/: Process.hs
distributed-process/src/Control/Distributed/Process/: Closure.hs  Internal.hs  Node.hs  Serializable.hs
distributed-process/src/Control/Distributed/Process/Backend/: Local.hs
distributed-process/src/Control/Distributed/Process/Internal/: CQueue.hs  Closure.hs  Dynamic.hs  MessageT.hs  Messaging.hs  Multicast.hs  Node.hs  NodeController.hs  Primitives.hs  StrictContainerAccessors.hs  StrictList.hs  StrictMVar.hs  Trace.hs  TypeRep.hs  Types.hs  WeakTQueue.hs
distributed-process/src/Control/Distributed/Process/Internal/Closure/: BuiltIn.hs  BuiltIn.hs-boot  CP.hs  Combinators.hs  Derived.hs  MkClosure.hs  Resolution.hs  Static.hs  TH.hs
distributed-process/src/Control/Distributed/Process/Internal/Process/: Primitives.hs
distributed-process/tests/: TestAuxiliary.hs  TestCH.hs  TestClosure.hs  TestLocalBackend.hs  TestReceive.hs  TestStats.hs  runTestLocalBackend.hs
distributed-static/: ChangeLog  distributed-static.cabal
distributed-static/src/Control/Distributed/: Static.hs
network-transport/: ChangeLog  network-transport.cabal
network-transport-2/: network-transport.cabal
network-transport-2/src/Network/: Transport.hs
network-transport-2/src/Network/Transport/: Chan.hs  Internal.hs  TCP.hs
network-transport-2/src/Network/Transport/Internal/: TCP.hs
network-transport-2/tests/: TestAuxiliary.hs  TestInMemory.hs  TestMulticast.hs  TestMulticastInMemory.hs  TestTCP.hs  TestTransport.hs  Traced.hs
network-transport-2/tests/chat/: ChatClient.hs
network-transport-2/tests/sumeuler/: sumeuler.sh
network-transport-composed/: network-transport-composed.cabal
network-transport-composed/src/Network/Transport/: Composed.hs
network-transport-inmemory/: network-transport-inmemory.cabal
network-transport-inmemory/src/Network/Transport/: Chan.hs
network-transport-inmemory/tests/: TestInMemory.hs  TestMulticastInMemory.hs  TestTransport.hs  Traced.hs
network-transport-pipes/: LICENSE  network-transport-pipes.cabal
network-transport-pipes/src/Network/Transport/: Pipes.hs
network-transport-tcp/: ChangeLog  network-transport-tcp.cabal
network-transport-tcp/benchmarks/: JustPingC.c  JustPingTransport.hs  JustPingTwoSocketPairs.hs  JustPingWithHeader.hs  Makefile
network-transport-tcp/src/Network/Transport/: TCP.hs
network-transport-tcp/src/Network/Transport/TCP/: Internal.hs
network-transport-tcp/src/Network/Transport/TCP/Mock/: Socket.hs
network-transport-tcp/tests/: TestAuxiliary.hs  TestQC.hs  TestTCP.hs  Traced.hs
network-transport/src/Network/: Transport.hs
network-transport/src/Network/Transport/: Chan.hs  Internal.hs  MVar.hs  Pipes.hs  TCP.hs
network-transport/src/Network/Transport/Internal/: TCP.hs
network-transport/tests/: TestAuxiliary.hs  TestTCP.hs  TestTransport.hs  Traced.hs
network-transport/tests/sumeuler/: SumEulerMaster.hs  SumEulerWorker.hs
(+383 files in other folders)
