name:           distributed-process-async
version:        0.1.0
cabal-version:  >=1.8
build-type:     Simple
license:        BSD3
license-file:   LICENCE
stability:      experimental
Copyright:      Tim Watson 2012 - 2013
Author:         Tim Watson
Maintainer:     watson.timothy@gmail.com
Stability:      experimental
Homepage:       http://github.com/haskell-distributed/distributed-process-platform
Bug-Reports:    http://github.com/haskell-distributed/distributed-process-platform/issues
synopsis:       The Cloud Haskell Application Platform
description:    Modelled after Erlang's OTP, this framework provides similar
                facilities for Cloud Haskell, grouping essential practices
                into a set of modules and standards designed to help you build
                concurrent, distributed applications with relative ease.
category:       Control
tested-with:    GHC == 7.4.2 GHC == 7.6.2
data-dir:       ""

source-repository head
  type:      git
  location:  https://github.com/haskell-distributed/distributed-process-platform

flag perf
  description: Build with profiling enabled
  default: False

library
  build-depends:
                   base >= 4.4 && < 5,
                   data-accessor >= 0.2.2.3,
                   distributed-process >= 0.5.0 && < 0.6,
                   distributed-process-extras >= 0.1.0 && < 0.2,
                   binary >= 0.6.3.0 && < 0.8,
                   deepseq >= 1.3.0.1 && < 1.4,
                   mtl,
                   containers >= 0.4 && < 0.6,
                   hashable >= 1.2.0.5 && < 1.3,
                   unordered-containers >= 0.2.3.0 && < 0.3,
                   fingertree < 0.2,
                   stm >= 2.4 && < 2.5,
                   time > 1.4 && < 1.5,
                   transformers
  if impl(ghc <= 7.5) 
    Build-Depends:   template-haskell == 2.7.0.0,
                     derive == 2.5.5,
                     uniplate == 1.6.12,
                     ghc-prim
  extensions:      CPP
                   InstanceSigs
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:
                   Control.Distributed.Process.Async
  other-modules:
                   Control.Distributed.Process.Async.Internal.Types

test-suite AsyncTests
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  build-depends:
                   base >= 4.4 && < 5,
                   ansi-terminal >= 0.5 && < 0.6,
                   distributed-process >= 0.5.0 && < 0.6,
                   distributed-process-extras >= 0.1.0 && < 0.2,
                   distributed-process-async,
                   distributed-process-tests >= 0.4.1 && < 0.5,
                   network >= 2.5 && < 2.7,
                   network-transport >= 0.4 && < 0.5,
                   mtl,
                   network-transport-tcp >= 0.4 && < 0.5,
                   binary >= 0.6.3.0 && < 0.8,
                   deepseq >= 1.3.0.1 && < 1.4,
                   HUnit >= 1.2 && < 2,
                   stm >= 2.3 && < 2.5,
                   test-framework >= 0.6 && < 0.9,
                   test-framework-hunit,
                   rematch >= 0.2.0.0,
                   transformers
  hs-source-dirs:
                   tests
  ghc-options:     -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  extensions:      CPP
  main-is:         TestAsync.hs
