name:           distributed-process-async
version:        0.2.6
cabal-version:  >=1.8
build-type:     Simple
license:        BSD3
license-file:   LICENCE
stability:      experimental
Copyright:      Tim Watson 2012 - 2016
Author:         Tim Watson
Maintainer:     Tim Watson <watson.timothy@gmail.com>
Homepage:       http://github.com/haskell-distributed/distributed-process-async
Bug-Reports:    http://github.com/haskell-distributed/distributed-process-async/issues
synopsis:       Cloud Haskell Async API
description:    This package provides a higher-level interface over Processes, in which an Async a is a
                concurrent, possibly distributed Process that will eventually deliver a value of type a.
                The package provides ways to create Async computations, wait for their results, and cancel them.
category:       Control
tested-with:    GHC == 7.8.4 GHC == 7.10.3
data-dir:       ""

source-repository head
  type:      git
  location:  https://github.com/haskell-distributed/distributed-process-async

flag perf
  description: Build with profiling enabled
  default: False

library
  build-depends:
                   base >= 4.4 && < 5,
                   data-accessor >= 0.2.2.3,
                   distributed-process >= 0.6.1 && < 0.8,
                   exceptions >= 0.8.2.1 && < 1.0,
                   binary >= 0.6.3.0 && < 0.9,
                   deepseq >= 1.3.0.1 && < 1.5,
                   mtl,
                   containers >= 0.4 && < 0.6,
                   hashable >= 1.2.0.5 && < 1.3,
                   unordered-containers >= 0.2.3.0 && < 0.3,
                   fingertree < 0.2,
                   stm >= 2.4 && < 2.5,
                   time >= 1.8.0.2,
                   transformers
  extensions:      CPP
                   InstanceSigs
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:
                   Control.Distributed.Process.Async
  other-modules:
                   Control.Distributed.Process.Async.Internal.Types

test-suite AsyncTests
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  build-depends:
                   base >= 4.4 && < 5,
                   ansi-terminal >= 0.5 && < 0.9,
                   distributed-process,
                   distributed-process-async,
                   distributed-process-systest >= 0.2.0,
                   exceptions >= 0.8.2.1 && < 1.0,
                   network >= 2.5 && < 2.7,
                   network-transport >= 0.4 && < 0.6,
                   network-transport-tcp >= 0.6 && < 0.9,
                   binary >= 0.6.3.0 && < 0.9,
                   deepseq >= 1.3.0.1 && < 1.5,
                   -- HUnit >= 1.2 && < 2,
                   stm >= 2.3 && < 2.5,
                   test-framework >= 0.6 && < 0.9,
                   test-framework-hunit,
                   rematch >= 0.2.0.0,
                   transformers
  hs-source-dirs:
                   tests
  ghc-options:     -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  extensions:      CPP
  main-is:         TestAsync.hs
