Name:          distributed-process-azure
Version:       0.1.0
Cabal-Version: >=1.8
Build-Type:    Simple
License:       BSD3 
License-File:  LICENSE
Copyright:     Well-Typed LLP
Author:        Duncan Coutts, Nicolas Wu, Edsko de Vries
Maintainer:    edsko@well-typed.com, duncan@well-typed.com, watson.timothy@gmail.com
Stability:     experimental
Homepage:      http://haskell-distributed.github.com
Bug-Reports:   https://cloud-haskell.atlassian.net/browse/DPAZURE
Synopsis:      Microsoft Azure backend for Cloud Haskell 
Description:   This is a proof of concept Azure backend for Cloud Haskell. It
               provides just enough functionality to run Cloud Haskell
               applications on Azure virtual machines. You need to create your
               virtual machines in the Azure management portal; you can then
               use this backend to copy or verify your executable to the
               virtual machine, start or terminate Cloud Haskell nodes on those
               virtual machines, and communicate with those virtual machines
               from your local machine. 
Category:      Control 

Source-Repository head
  Type:     git
  Location: https://github.com/haskell-distributed/distributed-process-azure

Flag build-demos
  description: Build the demos
  default:     False

Library
  Build-Depends:     base >= 4.4 && < 5,
                     azure-service-api >= 0.1 && < 0.2,
                     filepath >= 1.3 && < 1.4,
                     executable-path >= 0.0.3 && < 0.1,
                     libssh2 >= 0.2 && < 0.3,
                     pureMD5 >= 2.1 && < 2.2,
                     bytestring >= 0.9 && < 0.11,
                     distributed-process >= 0.5.0 && < 0.6,
                     binary >= 0.5 && < 0.8,
                     network-transport >= 0.4.0.0 && < 0.5,
                     network-transport-tcp >= 0.4.0 && < 0.5,
                     transformers >= 0.3 && < 0.5,
                     certificate >= 1.3 && < 1.4,
                     unix >= 2.5 && < 2.7,
                     mtl >= 2.1 && < 2.2,
                     rank1dynamic >= 0.2.0.0 && < 0.3,
                     distributed-static >= 0.3.0.0 && < 0.4
  Exposed-modules:   Control.Distributed.Process.Backend.Azure
  Extensions:        ViewPatterns,
                     RankNTypes,
                     ExistentialQuantification,
                     ScopedTypeVariables,
                     DeriveDataTypeable,
                     GeneralizedNewtypeDeriving
  ghc-options:       -Wall
  HS-Source-Dirs:    src

Executable cloud-haskell-azure-echo
  if flag(build-demos)
    Build-Depends:   base >= 4.4 && < 5,
                     distributed-process-azure >= 0.1 && < 0.2,
                     distributed-process >= 0.5.0 && < 0.6,
                     transformers >= 0.3 && < 0.5
  else
    buildable: False
  Main-Is:           demos/Echo.hs
  ghc-options:       -Wall

Executable cloud-haskell-azure-ping
  if flag(build-demos)
    Build-Depends:   base >= 4.4 && < 5,
                     distributed-process-azure >= 0.1 && < 0.2,
                     distributed-process >= 0.5.0 && < 0.6,
                     transformers >= 0.3 && < 0.5,
                     bytestring >= 0.9 && < 0.11,
                     binary >= 0.5 && < 0.8,
                     mtl,
                     libssh2
  else
    buildable: False
  Main-Is:           demos/Ping.hs
  ghc-options:       -Wall

Executable cloud-haskell-azure-fib
  if flag(build-demos)
    Build-Depends:   base >= 4.4 && < 5,
                     distributed-process-azure >= 0.1 && < 0.2,
                     distributed-process >= 0.5.0 && < 0.6,
                     transformers >= 0.3 && < 0.5,
                     bytestring >= 0.9 && < 0.11,
                     binary >= 0.5 && < 0.8,
                     binary-generic >= 0.2 && < 0.3,
                     rank1dynamic >= 0.1 && < 0.2,
                     distributed-static >= 0.2 && < 0.3,
                     random >= 1.0 && < 1.1 
  else
    buildable: False
  Main-Is:           demos/Fib.hs
  ghc-options:       -Wall
