name:           distributed-process-extras
version:        0.1.0
cabal-version:  >=1.8
build-type:     Simple
license:        BSD3
license-file:   LICENCE
stability:      experimental
Copyright:      Tim Watson 2012 - 2013
Author:         Tim Watson
Maintainer:     watson.timothy@gmail.com
Stability:      experimental
Homepage:       http://github.com/haskell-distributed/distributed-process-extras
Bug-Reports:    https://cloud-haskell.atlassian.net
synopsis:       Cloud Haskell Extras
description:    Supporting library, providing common types and utilities used by the
                various components that make up the distributed-process-platform package.
category:       Control
tested-with:    GHC == 7.4.2 GHC == 7.6.2
data-dir:       ""

source-repository head
  type:      git
  location:  https://github.com/haskell-distributed/distributed-process-extras

flag perf
  description: Build with profiling enabled
  default: False

library
  build-depends:
                   base >= 4.4 && < 5,
                   distributed-process >= 0.5.2 && < 0.6,
                   binary >= 0.6.3.0 && < 0.8,
                   deepseq >= 1.3.0.1 && < 1.4,
                   mtl,
                   containers >= 0.4 && < 0.6,
                   hashable >= 1.2.0.5 && < 1.3,
                   unordered-containers >= 0.2.3.0 && < 0.3,
                   fingertree < 0.2,
                   stm >= 2.4 && < 2.5,
                   time > 1.4 && < 1.5,
                   transformers
  if impl(ghc <= 7.5) 
    Build-Depends:   template-haskell == 2.7.0.0,
                     derive == 2.5.5,
                     uniplate == 1.6.12,
                     ghc-prim
  extensions:      CPP
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:
                   Control.Distributed.Process.Extras,
                   Control.Distributed.Process.Extras.Call,
                   Control.Distributed.Process.Extras.Time,
                   Control.Distributed.Process.Extras.Timer,
                   Control.Distributed.Process.Extras.UnsafePrimitives,
                   Control.Concurrent.Utils,
                   Control.Distributed.Process.Extras.Internal.Containers.MultiMap,
                   Control.Distributed.Process.Extras.Internal.Primitives,
                   Control.Distributed.Process.Extras.Internal.Types,
                   Control.Distributed.Process.Extras.Internal.Queue.SeqQ,
                   Control.Distributed.Process.Extras.Internal.Queue.PriorityQ
                   Control.Distributed.Process.Extras.Internal.Unsafe

test-suite InternalQueueTests
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  build-depends:
                   base >= 4.4 && < 5,
                   ansi-terminal >= 0.5 && < 0.6,
                   distributed-process >= 0.5.2 && < 0.6,
                   distributed-process-extras,
                   distributed-process-tests >= 0.4.1 && < 0.5,
                   HUnit >= 1.2 && < 2,
                   test-framework >= 0.6 && < 0.9,
                   test-framework-hunit,
                   QuickCheck >= 2.4,
                   test-framework-quickcheck2,
                   rematch >= 0.2.0.0,
                   ghc-prim
  hs-source-dirs:
                   tests
  ghc-options:     -Wall -rtsopts
  extensions:      CPP
  main-is:         TestQueues.hs
  cpp-options:     -DTESTING

test-suite TimerTests
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  build-depends:
                   base >= 4.4 && < 5,
                   ansi-terminal >= 0.5 && < 0.6,
                   deepseq >= 1.3.0.1 && < 1.4,
                   distributed-process >= 0.5.2 && < 0.6,
                   distributed-process-extras,
                   distributed-process-tests >= 0.4.1 && < 0.5,
                   network-transport >= 0.4 && < 0.5,
                   network-transport-tcp >= 0.4 && < 0.5,
                   HUnit >= 1.2 && < 2,
                   test-framework >= 0.6 && < 0.9,
                   test-framework-hunit,
                   QuickCheck >= 2.4,
                   test-framework-quickcheck2,
                   rematch >= 0.2.0.0,
                   ghc-prim
  hs-source-dirs:
                   tests
  ghc-options:     -Wall -rtsopts
  extensions:      CPP
  main-is:         TestTimer.hs
  cpp-options:     -DTESTING
